tests/ui/const-generics/mgca/assoc-const-without-type_const.stderr
error: use of `const` in the type system not defined as `type const`
  --> $DIR/assoc-const-without-type_const.rs:8:35
   |
LL |     const SIZE: usize;
   |     - help: add `type` before `const` for `Tr::SIZE`: `type`
...
LL | fn mk_array<T: Tr>(_x: T) -> [(); T::SIZE] {
   |                                   ^^^^^^^

error: use of `const` in the type system not defined as `type const`
  --> $DIR/assoc-const-without-type_const.rs:10:10
   |
LL |     const SIZE: usize;
   |     - help: add `type` before `const` for `Tr::SIZE`: `type`
...
LL |     [(); T::SIZE]
   |          ^^^^^^^

error: aborting due to 2 previous errors

